exports[`test should render a TextField with the rest of the props 1`] = `
<Field
  error="This field is required"
  help="This will not be shared with outside sources"
  htmlFor="email"
  isInline={true}
  label="Email Address"
  labelAttrs={
    Object {
      "className": "healtheintent-legend",
    }
  }
  required={true}>
  <Input
    className="healtheintent-application"
    id="email"
    maxLength={75}
    minLength={8}
    name="email"
    required={true}
    type="email" />
</Field>
`;

exports[`test should render a default TextField component 1`] = `
<Field
  error={null}
  help={null}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  required={false}>
  <Input
    maxLength={null}
    minLength={null}
    name={null}
    required={false}
    type="text" />
</Field>
`;

exports[`test should render as controlled when just a default value is passed into the TextField 1`] = `
<TextField
  error={null}
  help={null}
  inputAttrs={Object {}}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  maxLength={null}
  minLength={null}
  name={null}
  onChange={[Function]}
  required={false}
  type="text"
  value="foo">
  <Field
    error={null}
    help={null}
    isInline={false}
    label={null}
    labelAttrs={Object {}}
    required={false}>
    <div
      className="field">
      <Input
        maxLength={null}
        minLength={null}
        name={null}
        onChange={[Function]}
        required={false}
        type="text"
        value="foo">
        <input
          className="input"
          maxLength={null}
          minLength={null}
          name={null}
          onChange={[Function]}
          required={false}
          type="text"
          value="foo" />
      </Input>
    </div>
  </Field>
</TextField>
`;

exports[`test should render as uncontrolled when just a default value is passed into the TextField 1`] = `
<TextField
  defaultValue="foo"
  error={null}
  help={null}
  inputAttrs={Object {}}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  maxLength={null}
  minLength={null}
  name={null}
  required={false}
  type="text">
  <Field
    error={null}
    help={null}
    isInline={false}
    label={null}
    labelAttrs={Object {}}
    required={false}>
    <div
      className="field">
      <Input
        defaultValue="foo"
        maxLength={null}
        minLength={null}
        name={null}
        required={false}
        type="text">
        <input
          className="input"
          defaultValue="foo"
          maxLength={null}
          minLength={null}
          name={null}
          required={false}
          type="text" />
      </Input>
    </div>
  </Field>
</TextField>
`;
